# equivar_eval

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
equivar_eval/basis/: __init__.py  radial_basis.py
equivar_eval/config/: __init__.py  config.py
equivar_eval/process/: __init__.py  process.py
equivar_eval/scripts/: evaluate.py
examples/configs/: config.yaml
